--- a/test.htm
+++ b/test.htm
@@ -69,12 +69,19 @@ if(mute == false){
 console.log(n);
     document.getElementById('6-0').play();
 	if (n.indexOf("1432") > 1) {
-	document.getElementById('macro').play();
 	console.log("YAYAY");
 	n = "000";
 	mute = true;
 	console.log(mute);
-		
+	while(true){
+	document.getElementById('macro').play();
+	document.addEventListener('keydown', function(e) {
+  if (e.keyCode == 83) {
+  break;
+  }
+  }
+  
+		}
 	}
 	    if (document.getElementById('6-0').paused && mute == false) {
         document.getElementById('6-0').play();
@@ -214,6 +221,6 @@ event.preventDefault();
 
 
 </script>
-awd
+
 </body>
 </html>
