Changed code for macro and added copmbinedinos.mp3

--- a/test.htm
+++ b/test.htm
@@ -34,7 +34,7 @@
 </audio><audio id="6-12" controls style="display:none" preload="auto" >
   <source src="acoustic/acousticguitar-6string-12-e.wav" type="audio/wav"> Your browser does not support the audio element.
 </audio><audio id="macro" controls style="display:none" preload="auto" >
-  <source src="acoustic/pls.mp3" type="audio/mp3"> Your browser does not support the audio element.
+  <source src="acoustic/combinedinos.mp3" type="audio/mp3"> Your browser does not support the audio element.
 </audio><audio id="friend" controls style="display:none" preload="auto" >
   <source src="acoustic/friend.mp3" type="audio/mp3"> Your browser does not support the audio element.
 </audio><audio id="silence" controls style="display:none" preload="auto" >
